--- a/server.cfg
+++ b/server.cfg
@@ -75,6 +75,10 @@ sv_cheats 0
 // Default: sv_difficulty ""
 sv_difficulty "classic"
 
+// Disables the Wave Count, Zombie Count, and Zone Health HUD portions of your screen.
+//-- sv_hardcore_survival 0
+
+
 // If realism mode should be enabled. In realism mode Headshots are instant kills, while hits to all other areas of the body will do no damage.
 //-- sv_realism 0
 
@@ -171,27 +175,27 @@ sv_vote_issue_kick_allowed 0
 
 // Enable log - Enables logging to file, console, and udp < on | off >.
 // Recommended: log on
-log on
+//-- log on
 
 // Log bans - Log server bans in the server logs.
 // Default: sv_logbans 1
 // Recommended: sv_logbans 1
-sv_logbans 1
+//-- sv_logbans 1
 
 // Log echo - Display log information to the server console.
 // Default: sv_logecho 1
 // Recommended: sv_logecho 1
-sv_logecho 1
+//-- sv_logecho 1
 
 // Log file - Log server information in the log file.
 // Default: sv_logfile 1
 // Recommended: sv_logfile 1
-sv_logfile 1
+//-- sv_logfile 1
 
 // One file log - Log server information to only one file.
 // Default: sv_log_onefile 0
 // Recommended: sv_log_onefile 0
-sv_log_onefile 0
+//-- sv_log_onefile 0
 
 
 // ************************************************************************************
@@ -231,7 +235,7 @@ sv_log_onefile 0
 
 // Time a player can be idle before auto kicked from the server.
 // Default is 120
-//-- sv_idle_autokick_time 120
+sv_idle_autokick_time 120
 
 
 // ************************************************************************************
